devopspro/19- Segurança/dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-dashboard-deploy
spec:
  selector:
    matchLabels:
      app: k8s-dashboard-deploy
  template:
    metadata:
      labels:
        app: k8s-dashboard-deploy
    spec:
      serviceAccount: user-dashboard
      containers:
      - name: k8s-dashboard-deploy
        image: kubedevio/k8s-dashboard
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-dashboard-service
spec:
  selector:
    app: k8s-dashboard-service
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
